fixed overflow

--- a/.docker-config/node/src/styles/components/tutorialComponents/section.scss
+++ b/.docker-config/node/src/styles/components/tutorialComponents/section.scss
@@ -13,6 +13,7 @@
   .data {
     grid-column: 2;
     grid-row: 2;
+    overflow-x: auto;
   }
 
   .data > p > a {
